--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
+<html>
+<head>
+  <meta name="google-site-verification" content="fTMD7Y5K2XmN0IwP-Z7izYSFIP3uJRgROs2Boj3XO90" />
+</head>
+<body>  
 Hello World
+</body>
+</html>  
