--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta name="google-site-verification" content="fTMD7Y5K2XmN0IwP-Z7izYSFIP3uJRgROs2Boj3XO90" />
 </head>
 <body>  
-Hello World
+<h1>Hello World</h1>
 
 <ul>
 <li><a href="https://frutik.github.io/awesome-search/">Awesome Search</a></li>
