--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <ul>
 <li><a href="https://frutik.github.io/awesome-search/">Awesome Search</a></li>
 <li><a href="https://frutik.github.io/digitalocean-k8s-play/">DigitalOcean k8s play</a></li>
+  <li><a href="https://github.com/frutik/asterisk16-do-packer">Asterisk 16 installation on Centos 7 + Packer</a></li>
 </ul>
 
 </body>
